# slimmer

./: .gitignore  ApplicationInfo.h.in  BuildInfo.h.in  Button.cpp  Button.h  CMakeLists.txt  COPYING  Config.cpp  Config.h  Controller.cpp  Controller.h  ErrorInput.h  EventHandler.h  MenuItem.cpp  MenuItem.h  Player.cpp  Player.h  README.md  Screen.cpp  Screen.h  ScreenError.cpp  ScreenError.h  ScreenMenu.cpp  ScreenMenu.h  ScreenNowPlaying.cpp  ScreenNowPlaying.h  ScreenSeek.cpp  ScreenSeek.h  ScreenVolume.cpp  ScreenVolume.h  Server.cpp  Server.h  main.cpp
jsonrpccpp/client/: batchresponse.h  client.h  rpcprotocolclient.cpp  rpcprotocolclient.h
jsonrpccpp/common/: procedure.h  specificationparser.cpp  specificationwriter.cpp
scripts/: LCDd.dev.conf  devEnv.sh  slimmer  slimmer.conf.sample
tclap/: StdOutput.h
